tco/k8s/tools.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tools
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: skooner
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: skooner
  template:
    metadata:
      labels:
        k8s-app: skooner
    spec:
      containers:
      - name: skooner
        image: ghcr.io/skooner-k8s/skooner:stable
        ports:
        - containerPort: 4654
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 4654
          initialDelaySeconds: 30
          timeoutSeconds: 30
        resources:
          requests:
            memory: 200Mi
            cpu: 0.1   
          limits:
            memory: 1Gi
            cpu: 0.5          
      nodeSelector:
        'beta.kubernetes.io/os': linux


---
kind: Service
apiVersion: v1
metadata:
  name: skooner
  namespace: tools
spec:
  ports:
    - port: 80
      targetPort: 4654
  selector:
    k8s-app: skooner
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: skooner
  namespace: tools
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
spec:
  entryPoints:
    - https
    # - web
  routes:
  - kind: Rule
    match: Host(`dash.myhubs.net`) && PathPrefix(`/`)
    middlewares:
    - name: turkeyauth
      namespace: tools
    services:                       
    - kind: Service
      name: skooner
      namespace: tools
      passHostHeader: true
      port: 80
---
#
# Auth Middleware
#
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: turkeyauth
  namespace: tools
spec:
  forwardAuth:
    address: http://auth.turkey-services:9001/authn
    authResponseHeaders:
      - X-Forwarded-User
    trustForwardHeader: true
