tco/k8s/turkey-services.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: turkey-services
---
####################################################################################
####################################### auth #######################################
####################################################################################  
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: turkey-auth
  namespace: turkey-services
spec:
  entryPoints:
    - https
  routes:
  - kind: Rule
    match: Host(`auth.myhubs.net`) && PathPrefix(`/`)
    # middlewares:
    # - name: turkeyauth
    #   namespace: turkey-services
    services:
    - kind: Service
      name: auth
      passHostHeader: true
      port: 9001
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: turkeyauth
  namespace: turkey-services
spec:
  forwardAuth:
    address: http://auth.turkey-services:9001/authn
    authResponseHeaders:
      - X-Forwarded-User
      - X-Forwarded-UserEmail
      - X-Forwarded-UserPicture
    trustForwardHeader: true        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: turkey-services
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: auth
    spec:
      # terminationGracePeriodSeconds: 3
      containers:
      - name: turkeyauth
        image: mozillareality/turkeyauth:86
        imagePullPolicy: IfNotPresent        
        resources:
          requests:
            memory: 200Mi
            cpu: 0.1        
          limits:
            memory: 2Gi
            cpu: 1

---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: turkey-services
  labels:
    app: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - name: http
    port: 9001
    targetPort: 9001
---
####################################################################################
######################################### api ######################################
####################################################################################
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: turkey-api
  namespace: turkey-services
spec:
  entryPoints:
    - https
  routes:
  - kind: Rule
    match: Host(`api.myhubs.net`) && PathPrefix(`/`)
    middlewares:
    - name: turkeyauth
      namespace: turkey-services
    services:
    - kind: Service
      name: turkey-api
      passHostHeader: true
      port: 888    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turkey-api
  namespace: turkey-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turkey-api
  minReadySeconds: 2
  template:
    metadata:
      labels:
        app: turkey-api
    spec:
      serviceAccountName: api-sa
      containers:
      - name: turkey-orc
        image: mozillareality/turkeyapi:70
        imagePullPolicy: IfNotPresent        
        livenessProbe:
          httpGet:
            path: "http://turkey-api.turkey-services/Healthz"
            port: 888
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 120
        resources:
          requests:
            memory: 200Mi
            cpu: 0.1        
          limits:
            memory: 2Gi
            cpu: 1
      imagePullSecrets:
      - name: regcred      
---
apiVersion: v1
kind: Service
metadata:
  name: turkey-api
  namespace: turkey-services
spec:
  ports:
  - name: http
    port: 888
    targetPort: 888
  selector:
    app: turkey-api
---
####################################################################################
################################### pgbouncer ######################################
####################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: turkey-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbouncer
  minReadySeconds: 2
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
      - image: mozillareality/pgbouncer:6
        imagePullPolicy: IfNotPresent
        name: pgbouncer
        resources:
          requests:
            memory: 200Mi
            cpu: 0.1         
          limits:
            memory: 2Gi
            cpu: 1            
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: turkey-services
spec:
  ports:
  - name: http
    port: 5432
    targetPort: 5432
  selector:
    app: pgbouncer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer-t
  namespace: turkey-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbouncer-t
  minReadySeconds: 2
  template:
    metadata:
      labels:
        app: pgbouncer-t
    spec:
      containers:
      - image: mozillareality/pgbouncer:6
        imagePullPolicy: IfNotPresent
        name: pgbouncer-t
        resources:
          requests:
            memory: 200Mi
            cpu: 0.1        
          limits:
            memory: 2Gi
            cpu: 1                       
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-t
  namespace: turkey-services
spec:
  ports:
  - name: http
    port: 5432
    targetPort: 5432
  selector:
    app: pgbouncer-t
