tco/k8s/turkey-stream.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: turkey-stream
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turkey-dialog
  namespace: turkey-stream
  annotations:
    kubernetes.io/ingress.class: haproxy
    haproxy.org/server-ssl: "true"
    haproxy.org/load-balance: "url_param roomId"  #http://cbonte.github.io/haproxy-dconv/configuration-1.4.html#4.2-balance%20url_param
    # traefik.ingress.kubernetes.io/router.entrypoints: dialog

spec:
  rules:
  - host: stream.myhubs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dialog
            port: 
              number: 4443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turkey-turn
  namespace: turkey-stream
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: turn
spec:
  rules:
  - host: stream.myhubs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coturn
            port: 
              number: 5349    
---
########################################################################
######################   dialog   ######################################
########################################################################  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dialog
  namespace: turkey-stream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dialog
  minReadySeconds: 15
  strategy:
    type: Recreate  
  template:
    metadata:
      labels:
        app: dialog
    spec:
      hostNetwork: true
      containers:
      - name: dialog
        image: mozillareality/dialog:17
        imagePullPolicy: Always
        ports:        
        - hostPort: 4443
          containerPort: 4443
---
apiVersion: v1
kind: Service
metadata:
  name: dialog
  namespace: turkey-stream
spec:
  ports:
  - name: https-dialog
    port: 4443
    targetPort: 4443
  - name: https-dialog-adm
    port: 7000
    targetPort: 7000
  selector:
    app: dialog
---
########################################################################
######################   coturn   ######################################
########################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
  namespace: turkey-stream
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coturn                                          
  minReadySeconds: 15
  strategy:
    type: Recreate    
  template:
    metadata:
      labels:
        app: coturn
    spec:
      hostNetwork: true
      containers:
      - name: coturn
        image: mozillareality/coturn:14
        imagePullPolicy: Always
        ports:
        - hostPort: 5349
          containerPort: 5349
        livenessProbe:
          httpGet:
            path: "http://localhost"
            port: 1111
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 120
        # resources:
        #   requests:
        #     memory: 200Mi
        #     cpu: 0.1
        #   limits:
        #     memory: 4Gi
        #     cpu: 2
---
apiVersion: v1
kind: Service
metadata:
  name: coturn
  namespace: turkey-stream
spec:
  ports:
  - name: https-coturn
    port: 5349
    targetPort: 5349
  selector:
    app: coturn
